--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <a href="{{ url_for('index') }}" class="font-bold text-xl hover:text-indigo-600 transition-colors">
-                    Secure Voting System
+                    Smart Vote
                 </a>
                 <div class="flex space-x-4">
                     <a href="{{ url_for('index') }}" 
